[package]
name = "helium"
version = "0.1.0"
authors = ["MUsmanZahid <57581718+MUsmanZahid@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
# crate-type = ["rlib", "staticlib"]

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = 2
overflow-checks = false
panic = "abort"
